--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
 body {
-  background-image: url("images/tomato.svg");
+  background-image: url("images/tomato_photo.svg");
   background-repeat: no-repeat;
   left: 0;
-  background-size: 1000px;
+  background-size: 290px;
   background-color: #e8d1a7;
 }
 
@@ -11,65 +11,103 @@ p {
   font-weight: 400;
   font-style: normal;
   font-size: 50px;
+  text-shadow:
+    -2px -2px 0 #442d1c,
+    2px -2px 0 #442d1c,
+    -2px 2px 0 #442d1c,
+    2px 2px 0 #442d1c;
+  color: #e8d1a7;
 }
 
+.text {
+  margin-top: 148px;
+  margin-left: 78px;
+}
+
+button {
+  margin-left: 20px;
+  cursor: pointer;
+  margin-top: 9px;
+  border: none;
+  background-color: #442d1c;
+  color: #e8d1a7;
+  border-radius: 5px;
+  padding: 6px;
+  font-family: "Figtree", sans-serif;
+}
 
 ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
 
 .techniqueMenu {
-    position: fixed;
-    top: 0;
-    right: -275px;
-    width: 250px;
-    height: 100%;
-    transition: right 250ms ease-in-out;
+  position: fixed;
+  top: 0;
+  right: -275px;
+  width: 250px;
+  height: 100%;
+  transition: right 250ms ease-in-out;
+  font-family: "Figtree", sans-serif;
 }
 
 .techniqueMenu.active {
-    right: 0;
+  right: 0;
 }
 
 .techniqueMenu .technique {
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 100%;
-    height: 100%;
-    padding: 10px;
-    z-index: 20;
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  padding: 10px;
+  z-index: 20;
+  background-color: rgba(0, 0, 0, 0.1);
 }
 
 .techniqueMenu .toggle {
-    position: absolute;
-    top: 30px;
-    right: 280px;
-    text-align: left;
-    padding-right: 8px;
-    cursor: pointer;
-    font-size: 18px;
+  position: absolute;
+  top: 30px;
+  right: 280px;
+  text-align: left;
+  padding-right: 8px;
+  cursor: pointer;
+  font-size: 18px;
 }
 
 .techniqueMenu.active .toggle i {
-    animation: toggleSpinOpen 150ms ease-in-out forwards;
+  animation: toggleSpinOpen 150ms ease-in-out forwards;
 }
 
 .techniqueMenu:not(.active) .toggle i {
-    animation: toggleSpinClose 150ms ease-in-out forwards;
+  animation: toggleSpinClose 150ms ease-in-out forwards;
 }
 
 @keyframes toggleSpinOpen {
-    0% {rotate: 0deg;}
-    25% {rotate: 45deg;}
-    50% {rotate: 90deg;}
-    100% {rotate: 180deg;}
+  0% {
+    rotate: 0deg;
+  }
+  25% {
+    rotate: 45deg;
+  }
+  50% {
+    rotate: 90deg;
+  }
+  100% {
+    rotate: 180deg;
+  }
 }
 
 @keyframes toggleSpinClose {
-    0% {rotate: 180deg;}
-    50% {rotate: 270deg;}
-    100% {rotate: 360deg;}
+  0% {
+    rotate: 180deg;
+  }
+  50% {
+    rotate: 270deg;
+  }
+  100% {
+    rotate: 360deg;
+  }
 }
